[package]
name = "future-limit"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", default-features = false, features = ["sync", "rt", "time"] }
async-trait = "0.1"

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1", default-features = false, features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
